Fix scaling on small phones

--- a/style.css
+++ b/style.css
@@ -29,10 +29,11 @@ body {
 }
 
 .card {
-    flex: 1 1 400 px;
+    flex: 1 1 280 px;
     max-width: 600px;
     margin: 10px;
     padding: 5px;
+    box-sizing: border-box;
 }
 
 .content {
